crates/toml_edit/tests/snapshots/invalid/local-time/hour-over.stderr
TOML parse error at line 2, column 5
  |
2 | d = 24:00:00
  |     ^^^^^^^^
invalid time, expected hour between 00 and 23
